--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="nav_gestion_panier">Votre Panier</string>
     <string name="action_settings">Settings</string>
 
+    <string name="identifiant">Identifiant</string>
+    <string name="password">Password</string>
+
     <string name="menu_boutique">Boutique</string>
     <string name="menu_connexion">Connexion</string>
     <string name="menu_mon_compte">Mon Compte</string>
