--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Boutique MonPullMoch</string>
-    <string name="app_footer">Réalisé par P. Laroche, 2019</string>string>
+    <string name="app_footer">Réalisé par G. Moirod, S. Seigneur, D. Diani, 2021</string>string>
     <string name="vc_btn_precedent">&lt;</string>
     <string name="vc_btn_suivant">&gt;</string>
     <string name="vc_btn_annuler">Annuler</string>
